# lsplex

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  CMakeLists.txt  Makefile  README.md  README_8md.html  about.html  about_8dox.html  annotated.html  classlsplex_1_1LsContact.html  classlsplex_1_1LsPlex.html  classlsplex_1_1jsonrpc_1_1istream.html  classlsplex_1_1jsonrpc_1_1ostream.html  classlsplex_1_1jsonrpc_1_1pal_1_1detail_1_1fd.html  conanfile.py  dir_304b2019f881377c7ff28b345eb0e14e.html  dir_45ceaae7855647d8e15cc2abf65b95d9.html  dir_91acd94fd8e19b606395a4f5e16e64f3.html  dir_e68e8157741866f444e17edd764ebbae.html  dir_f2ffc4de2c327d2c85634cdac5c78276.html  files.html  index.html  jsonrpc_8h.html  lsplex_8h.html  modules.html  namespaceboost.html  namespaceboost_1_1asio.html  namespacelsplex.html  namespacelsplex_1_1jsonrpc.html  namespacelsplex_1_1jsonrpc_1_1detail.html  namespacelsplex_1_1jsonrpc_1_1pal.html  namespacelsplex_1_1jsonrpc_1_1pal_1_1detail.html  namespaces.html  pages.html  pal_8h.html  pal__posix_8h.html  pal__windows_8h.html  searchdata-v2.js  (+6 more)
.github/actions/apt-install/: action.yml
.github/actions/conan/: action.yml
.github/scripts/: conan-ci-setup.sh
.github/workflows/: ci.yml
cmake/: ccache.cmake  compiler-features.cmake  compiler-flags.cmake  coverage.cmake  exe-install.cmake  lib-install.cmake  package-config.cmake.in  prelude.cmake  sanitizers.cmake
doc/: CMakeLists.txt  Doxyfile.in  conf.py.in
include/greeter/: greeter.h  version.h.in
include/jsonrpc/: circular_buffer.h  jsonrpc.h
include/jsonrpc/pal/: pal.h  pal_posix.h  pal_windows.h
include/lsplex/: jsonrpc.h  lsplex.h  version.h.in
src/greeter/: main.cpp
src/libgreeter/: greeter.cpp
src/liblsplex/: jsonrpc.cpp  lsplex.cpp
src/lsplex/: main.cpp
test/: greeter.cpp  jsonrpc.cpp  lsplex.cpp
test/resources/: jsonrpc_1.txt  justonemessage.txt  twomessages.txt  well_behaved_messages.txt
test/wincat/: wincat.cpp
